load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["mock.go"],
    importpath = "github.com/theQRL/zond/beacon-chain/builder/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//protos/engine/v1:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
    ],
)
