load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mock_slashing_checker.go"],
    importpath = "github.com/theQRL/zond/beacon-chain/slasher/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//config/params:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//protos/zond/v1alpha1:go_default_library",
    ],
)
