load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/theQRL/zond/beacon-chain/slasher/types",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//consensus-types/primitives:go_default_library",
        "//protos/zond/v1alpha1:go_default_library",
    ],
)
