load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["mock.go"],
    importpath = "github.com/theQRL/zond/beacon-chain/operations/voluntaryexits/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/state:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//protos/zond/v1alpha1:go_default_library",
    ],
)
